--- a/premade.html
+++ b/premade.html
@@ -8,7 +8,22 @@
 
 
   <footer>
-    <h4>Shipping/Contact</h4>
+    <div>
+      <h4><a href="./premade.html">Premade Bags</a></h4>
+    </div>
+    <div>
+      <h4><a href="./wholesale.html"> Wholesale Bags</a></h4>
+    </div>
+    <div>
+      <h4><a href="."
+    </div>
+  <div>
+  <h4><a href= "./contact.html">Customer Service</a></h4>
+</div>
+<div>
+  <h4>
+</div>
+
   </footer>
 </body>
 </html>
