--- a/premade.html
+++ b/premade.html
@@ -7,22 +7,21 @@
 
 
 
+
   <footer>
     <div>
       <h4><a href="./premade.html">Premade Bags</a></h4>
     </div>
     <div>
       <h4><a href="./wholesale.html"> Wholesale Bags</a></h4>
-    </div>
-    <div>
-      <h4><a href="."
+    <h4><a href=".buildabag.html">Build a bag</a></h4>
     </div>
   <div>
   <h4><a href= "./contact.html">Customer Service</a></h4>
 </div>
 <div>
-  <h4>
-</div>
+    <h4><a href="shipping.html">Shipping</a><h4>
+  </div>
 
   </footer>
 </body>
