--- a/shipping.html
+++ b/shipping.html
@@ -4,5 +4,21 @@
   <title>Party Bags To Go</title>
 </head>
 <body>
+  <footer>
+    <div>
+      <h4><a href="./premade.html">Premade Bags</a></h4>
+    </div>
+    <div>
+      <h4><a href="./wholesale.html"> Wholesale Bags</a></h4>
+    <h4><a href=".buildabag.html">Build a bag</a></h4>
+    </div>
+  <div>
+  <h4><a href= "./contact.html">Customer Service</a></h4>
+</div>
+<div>
+    <h4><a href="shipping.html">Shipping</a><h4>
+  </div>
+  <img src="https://partybagstogo.com/skin/toy_store/images/ybizz_header_organisation_images/logo.png" alt="Party bags to go"
+</footer>
 </body>
 </html>
