--- a/shipping.html
+++ b/shipping.html
@@ -4,10 +4,13 @@
   <title>Party Bags To Go</title>
 </head>
 <body>
-
+  <footer>
+    <h4><a href="./premade.html">Premade Bags</a></h4>
+    <h4><a href="./wholesale.html"> Wholesale Bags</a></h4>
+    <h4><a href="./buildabag.html">Build-a-Bag<a/></h4>
+    <h4><a href="./shipping.html">Shipping</a></h4>
+    <h4><a href= "./contact.html">Customer Service</a></h4>
+  </footer>
 </body>
 
 </html>
-<footer>
-  <h4><a href="./premade.html">Premade Bags</a></h4>
-</footer>
