--- a/shipping.html
+++ b/shipping.html
@@ -5,6 +5,7 @@
 </head>
 <body>
   <footer>
+    <img src="https://partybagstogo.com/skin/toy_store/images/ybizz_header_organisation_images/logo.png"></img>
     <h4><a href="./premade.html">Premade Bags</a></h4>
     <h4><a href="./wholesale.html"> Wholesale Bags</a></h4>
     <h4><a href="./buildabag.html">Build-a-Bag<a/></h4>
