header and footer

--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
   <title>Party Bags To Go</title>
-  <link rel="stylesheet" href="./css/">
   <link rel="stylesheet" type="text/css" href="./css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
@@ -21,19 +20,25 @@
 
       </nav>
     </header>
-    <div class = "items">
-      <div class = "it">
+    <div class = "grid">
+      <div class = "item">
         <h3>Premade Bags</h3>
       </div>
-      <div class="it">
+      <div class="item">
         <h3>Build-A-Bag</h3>
       </div>
-      <div class="it">
+      <div class="item">
         <h3>Wholesale Bags</h3>
       </div>
     </div>
   </div>
-
-  <h1>Home</h1>
+  <footer>
+    <h4><a href="./premade.html">Premade Bags</a></h4>
+    <h4><a href="./wholesale.html"> Wholesale Bags</a></h4>
+    <h4><a href="./buildabag.html">Build-a-Bag<a/></h4>
+    <h4><a href="./shipping.html">Shipping</a></h4>
+    <h4><a href= "./contact.html">Customer Service</a></h4>
+    <a id="logo" href = "./index.html"><img src = "./images/logo.png"></img></a>
+  </footer>
 </body>
 </html>
