--- a/shipping.html
+++ b/shipping.html
@@ -2,15 +2,38 @@
 <html>
 <head>
   <title>Party Bags To Go</title>
+  <link rel="stylesheet" type="text/css" href="./css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
 <body>
+  <div class="container">
+    <p class = "cart">Your Cart</p>
+    <header class ="row">
+      <a href = "./index.html"><img src = "./images/logo.png"></img></a>
+      <nav>
+        <a href = "./premade.html"><button class="button">Premade Bags</button></a>
+        <a href = "./buildabag.html"><button class = "button">Build-A-Bag</button></a>
+        <a href = "./wholesale.html"><button class = "button">Wholesale Bags</button></a>
+        <a href = "./contact.html"><button class = "button">Contacts</button></a>
+        <a href = "./shipping.html"><button class = "button">Shipping</button></a>
+      </nav>
+    </header>
+    <div class="heading">
+      <h2>Shipping</h2>
+    </div>
+    <div class = "main">
+      <div class = "sub">
+        <p>Orders are shipped in 1 business day of when the order is placed.</p>
+      </div>
+    </div>
+  </div>
   <footer>
-    <img src="./images/logo.png"></img>
     <h4><a href="./premade.html">Premade Bags</a></h4>
     <h4><a href="./wholesale.html"> Wholesale Bags</a></h4>
     <h4><a href="./buildabag.html">Build-a-Bag<a/></h4>
     <h4><a href="./shipping.html">Shipping</a></h4>
     <h4><a href= "./contact.html">Customer Service</a></h4>
+    <a id="logo" href = "./index.html"><img src = "./images/logo.png"></img></a>
   </footer>
 </body>
 
