--- a/shipping.html
+++ b/shipping.html
@@ -4,10 +4,13 @@
   <title>Party Bags To Go</title>
   <link rel="stylesheet" type="text/css" href="./css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
 </head>
 <body>
   <div class="container">
-    <p class = "cart">Your Cart</p>
+    <div class = cart>
+      <p class>Your Cart</p>
+    </div>
     <header class ="row">
       <a href = "./index.html"><img src = "./images/logo.png"></img></a>
       <nav>
@@ -24,6 +27,132 @@
     <div class = "main">
       <div class = "sub">
         <p>Orders are shipped in 1 business day of when the order is placed.</p>
+        <p>Most orders arrive in 1 to 4 business days from shipping date.</p>
+        <p>View State by State delivery days below.</p>
+        <p>Concerened about arrival date? Email or call us with your shipping information and we will give you the best method of shipping to make sure order arrives in time for you event!</p>
+        <br>
+        <h5>SHIPPING RATES FOR CONTINENTAL UNITED STATES:</h5>
+        <h6>*Rates are based on Order Total before any discounts are applied</h6>
+
+        <table>
+          <tr>
+            <th>Dollar Amt</th>
+            <th>USA FedEx GROUND</th>
+            <th>USA FedEx EXPRESS SAVER</th>
+            <th>USA FedEx 2Day</th>
+            <th>USA FedEx Overnight</th>
+          </tr>
+          <tr>
+            <td>Up To $19.99</td>
+            <td>$15.95</td>
+            <td>$23.95</td>
+            <td>$33.95</td>
+            <td>49.95</td>
+          </tr>
+          <tr>
+            <td>$20.00 - $39.99</td>
+            <td>$15.95</td>
+            <td>$25.95</td>
+            <td>$36.95</td>
+            <td>$54.95</td>
+          </tr>
+          <tr>
+            <td>$40.00 - $59.99</td>
+            <td>$15.95</td>
+            <td>$29.95</td>
+            <td>$40.95</td>
+            <td>$62.95</td>
+          </tr>
+          <tr>
+            <td>$60.00 - $69.95</td>
+            <td>$15.95</td>
+            <td>$33.95</td>
+            <td>$45.95</td>
+            <td>$72.95</td>
+          </tr>
+          <tr>
+            <td>$70.00 - $119.95</td>
+            <td>$19.95</td>
+            <td>$37.95</td>
+            <td>$48.95</td>
+            <td>$81.95</td>
+          </tr>
+          <tr>
+            <td>$120.00 - $139.99</td>
+            <td>$27.95</td>
+            <td>$42.95</td>
+            <td>$55.95</td>
+            <td>$89.95</td>
+          </tr>
+          <tr>
+            <td>$140.00 - $159.99</td>
+            <td>$30.95</td>
+            <td>$57.95</td>
+            <td>$82.95</td>
+            <td>$97.95</td>
+          </tr>
+          <tr>
+            <td>$160.00 - $179.99</td>
+            <td>$30.95</td>
+            <td>$57.95</td>
+            <td>$82.95</td>
+            <td>$97.95</td>
+          </tr>
+          <tr>
+            <td>$180.00 - $199.99</td>
+            <td>$33.95</td>
+            <td>$57.95</td>
+            <td>$82.95</td>
+            <td>$105.95</td>
+          </tr>
+          <tr>
+            <td>$200.00 and above</td>
+            <td>Call For Shipping</td>
+            <td>Call For Shipping</td>
+            <td>Call For Shipping</td>
+            <td>Call For Shipping</td>
+          </tr>
+        </table>
+        <h5>IF YOU ARE IN THE FOLLOWING STATES, YOUR SHIPPING TIMEFRAMES FROM THE DAY SHIPPED FOR GROUND ARE:</h5>
+        <p>Orders placed by 1:00 PM Eastern Standard Time will ship same day.</p>
+        <table>
+          <tr>
+            <th></th>
+            <th></th>
+            <th></th>
+            <th></th>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+        </table>
       </div>
     </div>
   </div>
