--- a/buildabag.html
+++ b/buildabag.html
@@ -4,6 +4,7 @@
   <title>Party Bags To Go</title>
   <link rel="stylesheet" type="text/css" href="./css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
 </head>
 <body>
   <div class="container">
