--- a/shipping.html
+++ b/shipping.html
@@ -117,42 +117,48 @@
         <p>Orders placed by 1:00 PM Eastern Standard Time will ship same day.</p>
         <table>
           <tr>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
+            <th>STATES</th>
+            <th>FEDEX GROUND DELIVERY DAYS	</th>
           </tr>
           <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>TN,AL,AR, GA, IL, IN, KY, MS, MO</td>
+            <td>1 - 2</td>
           </tr>
           <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>DE, FL, IA, KS, LA, MD, MI, NC. NJ, OH, OK, PA, SC, VA,  WI, WV</td>
+            <td>2</td>
           </tr>
           <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>CT, MN, NE, SD, TX</td>
+            <td>2 - 3</td>
           </tr>
           <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>NM, NY</td>
+            <td>2 - 4</td>
           </tr>
           <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>MA, ME, NH, RI, VT</td>
+            <td>3</td>
+          </tr>
+          <tr>
+            <td>AZ, CA, CO, ID, ND, NV, OR, UT, WY</td>
+            <td>3 - 4</td>
+          </tr>
+          <tr>
+            <td>WA</td>
+            <td>4</td>
+          </tr>
+          <tr>
+            <td>MT</td>
+            <td>4 - 5**</td>
+          </tr>
+          <tr>
+            <td>**small portion of MT take 5 days</td>
+            <td> - view map for the areas.</td>
           </tr>
         </table>
+        <p>We know that Goodie Bags Can NOT be late for the party, and understanding the  shipping timeframe is crucial for our customers.  Instead of the standard shipping page, we have beefed this section up to better explain what you REALLY want to know:  When will I have my goodie bags?  Our hope is to explain shipping without bogging down in the details, but giving enough info for you to make the best and most economical decision.</p>
+        <br><p>Please use your CELL PHONE for the Phone Number on the Order form so we can contact you ASAP if we need to. </p>
       </div>
     </div>
   </div>
