--- a/shipping.html
+++ b/shipping.html
@@ -159,6 +159,42 @@
         </table>
         <p>We know that Goodie Bags Can NOT be late for the party, and understanding the  shipping timeframe is crucial for our customers.  Instead of the standard shipping page, we have beefed this section up to better explain what you REALLY want to know:  When will I have my goodie bags?  Our hope is to explain shipping without bogging down in the details, but giving enough info for you to make the best and most economical decision.</p>
         <br><p>Please use your CELL PHONE for the Phone Number on the Order form so we can contact you ASAP if we need to. </p>
+        <p>Here are the facts:</p>
+        <ol>
+          <li>Orders ship next business day.  (Bulk orders are not included in this timeframe)
+            <br>Your tracking number will be emailed w/ expected delivery date the day after the party favors are shipped.
+            <ul>
+              <li>Business days are M-F (except major holidays)</li>
+              <li>If you order over the weekend, the order will be shipped on Monday (unless of course Monday is a major holiday -- like 4th of July).</li>
+            </ul>
+          </li>
+          <li>Here is an example if your ground shipping timeframe is 3 days:  If the order is placed on Monday, then your shipping days are Wednesday, Thursday, and Friday (delivery should be on Friday).
+            <ul>
+              <li>SEE section in BLUE for details on GROUND Continental USA Shipping timeframes.</li>
+            </ul>
+          </li>
+          <li>Express Saver is 3 shipping days 99% of the time (use the above example of how 3 shipping days play out in the FedEx world).  So, if you are in California and order on Monday with Express Saver, your goodie bags should arrive on Friday. Fyi - if you order on Wednesday w/ Express saver, the box will arrive on Tuesday.</li>
+          <li>Shipping charges are added to the total price of the party favors.</li>
+          <li>NO PO BOXES - unless a military APO/FPO Box</li>
+          <li>GROUND AND EXPRESS CHARGES ARE REFLECTED FOR CONTINENTAL USA ORDERS ONLY.  INTERNATIONAL & non-contienental USA SHIPMENTS AVAILABLE - Email or call for details.
+          <br>Also- if you have questions - just call us.  Shoppe hours are usually 9 - 5 M-F daily.  Leave mssg & we will call you back.
+          </li>
+          <li>**DELAY IN SHIPPING NOTIFICATIONS ARE POSTED: If there is going to be a delay in shipping, it will be posted on the front page of the website. This is very rare, but happens about 2-3 times a year.</li>
+        </ol>
+        <p>Below is the Ground Fedex Map:</p>
+        <img src = "./images/shipping map.png"></img>
+        <h4>EXPRESS SHIPMENT INFO FOR CONTIENTAL USA</h4>
+        <p>Express shipments are Monday - Friday only unless you call us for a special charge for Saturday delivery.</p>
+        <p>FED EX EXPRESS SAVER (3 business days in most areas and for USA Only).</p>
+        <p>FED EX 2 DAY AIR (2 business days and for USA only).</p>
+        <p>STANDARD OVERNIGHT (Received by 8 PM local time on the next business day and for USA only)</p>
+        <p>Express orders must also be placed by 1:00 Eastern time Monday - Friday.  BUT IF you find yourself in a snag after 1:00, give us a call and we will tell you if it is do-able - keep in mind you will need to talk to a real live person who can expedite the order or tell you if it is approved.</p>
+        <h4>Shipment Notifications</h4>
+        <p>An email will be sent the day after the goodie bags are shipped, and will include the expected delivery date and tracking number.</p>
+        <h4>other info:</h4>
+        <p><strong>Shipping to Canada</strong> - Ocassionaly we ship order to Canada. Shipments are made using USPS Priority Mail International and charges for shipping usually range from $30.00 to $40.00. For large orders, the shipping cost may be higher. To get a shipping quote, use the contact us form and provide the shipping address, the quantity and the items you would like to order and we will email a quote back within 24 hours.</p>
+        <p><strong>Returns</strong> - If you are not satisfied with your order, contact us to let us know you are returning the order. We will refund your order 100% minus the shipping charges and any charges for candy. The candy will be disposed upon return.</p>
+        <p>* On rare occasions we will ship small orders USPS</p>
       </div>
     </div>
   </div>
