--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,9 @@
       </nav>
     </header>
   </div>
+  <div class="heading">
+    <h2>Contacts</h2>
+  </div>
   <footer>
     <h4><a href="./premade.html">Premade Bags</a></h4>
     <h4><a href="./wholesale.html"> Wholesale Bags</a></h4>
