--- a/buildabag.html
+++ b/buildabag.html
@@ -20,6 +20,14 @@
       </nav>
     </header>
   </div>
+  <div class="heading">
+    <h2>Build-A-Bag</h2>
+  </div>
+  <div main="main">
+    <div class="sub">
+    </div>
+  </div>
+
   <footer>
     <h4><a href="./premade.html">Premade Bags</a></h4>
     <h4><a href="./wholesale.html"> Wholesale Bags</a></h4>
