--- a/shipping.html
+++ b/shipping.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" type="text/css" href="./css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
+  <script type="text/javascript" src="./js/scripts.js"></script>
 </head>
 <body>
   <div class="container">
@@ -21,6 +22,8 @@
         <a href = "./shipping.html"><button class = "button">Shipping</button></a>
       </nav>
     </header>
+
+    
     <div class="heading">
       <h2>Shipping</h2>
     </div>
@@ -198,6 +201,8 @@
       </div>
     </div>
   </div>
+
+
   <footer>
     <h4><a href="./premade.html">Premade Bags</a></h4>
     <h4><a href="./wholesale.html"> Wholesale Bags</a></h4>
