--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,9 @@
   <div class="heading">
     <h2>Contacts</h2>
   </div>
+  <div class="main">
+
+  </div>
   <footer>
     <h4><a href="./premade.html">Premade Bags</a></h4>
     <h4><a href="./wholesale.html"> Wholesale Bags</a></h4>
