problem with multiple items on product pages

--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
 
 
     <div class = "grid">
-      <div class = "item">
+      <div class = "cell">
         <h3>Premade Bags</h3>
       </div>
-      <div class="item">
+      <div class="cell">
         <h3>Build-A-Bag</h3>
       </div>
-      <div class="item">
+      <div class="cell">
         <h3>Wholesale Bags</h3>
       </div>
     </div>
 
     <div class ="slideGroup">
-       <button class = "w3-button w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
+       <button class = "gallery-button display-left" onclick="plusDivs(-1)">&#10094;</button>
        <div class="slides">
          <div class = "heading">This is a placeholder1</div>
        </div>
@@ -45,10 +45,10 @@
        <div class="slides">
          <div class = "heading">This is a placeholder3</div>
        </div>
-       <button class = "w3-button w3-display-right" onclick="plusDivs(1)">&#10095;</button>
+       <button class = "gallery-button display-right" onclick="plusDivs(1)">&#10095;</button>
      </div>
      <div class = "slideGroup">
-       <button class = "w3-button w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
+       <button class = "gallery-button display-left" onclick="plusDivs(-1)">&#10094;</button>
        <div class="slides">
          <div class = "heading">This is a placeholder4</div>
        </div>
@@ -58,7 +58,7 @@
        <div class="slides">
          <div class = "heading">This is a placeholder6</div>
        </div>
-       <button class = "w3-button w3-display-right" onclick="plusDivs(1)">&#10095;</button>
+       <button class = "gallery-button display-right" onclick="plusDivs(1)">&#10095;</button>
      </div>
 
   </div>
