--- a/premade.html
+++ b/premade.html
@@ -21,27 +21,54 @@
       </nav>
     </header>
 
-
-    <h3 class = "itemName">Baseball Goody Bag</h3>
-    <h4>$3.80</h4>
-    <span class = "description">
-      <p>Each Bag contains the following items:</p>
-      <ul>
-        <li>Foam Baseball<span id = "dots">...</span></li>
-      <span id = "more"><li>Mini Baseball Sports Missile</li>
-        <li>Baseball Tattoo (assorted)</li>
-        <li>Mini Baseball Magic Spring</li>
-        <li>2 Baseball Fun Bands</li>
-        <li>Wooden Baseball Paddle ball Game</li>
-        <li>Baseball Whistle
-        <br><br>DESIGNED FOR BOYS and GIRLS ages 3 & up
-        <br>Items come in a bag with a printed design and TWIST TIE</li>
-      </ul>
-      <button onclick = "readMore()" id="myBtn">Read More</h5>
-    </span>
+    <div class ="heading">
+      <h2>Premade Bags</h2>
+    </div>
+    <div class = "main">
+      <div class = "sub">
+        <div class = "item">
+          <h3 class = "itemName">Baseball Goody Bag</h3>
+          <h4>$3.80</h4>
+          <span class = "description">
+            <p>Each Bag contains the following items:</p>
+            <ul>
+              <li>Foam Baseball<span id = "dots">...</span></li>
+              <span id = "more"><li>Mini Baseball Sports Missile</li>
+              <li>Baseball Tattoo (assorted)</li>
+              <li>Mini Baseball Magic Spring</li>
+              <li>2 Baseball Fun Bands</li>
+              <li>Wooden Baseball Paddle ball Game</li>
+              <li>Baseball Whistle
+              <br><br>DESIGNED FOR BOYS and GIRLS ages 3 & up
+              <br>Items come in a bag with a printed design and TWIST TIE</li>
+            </ul>
+            <button onclick = "readMore()" id="myBtn">Read More</h5>
+          </span>
+        </div>
+        <div class = "item">
+          <h3 class = "itemName">Baseball Goody Bag</h3>
+          <h4>$3.80</h4>
+          <span class = "description">
+            <p>Each Bag contains the following items:</p>
+            <ul>
+              <li>Foam Baseball<span id = "dots">...</span></li>
+              <span id = "more"><li>Mini Baseball Sports Missile</li>
+              <li>Baseball Tattoo (assorted)</li>
+              <li>Mini Baseball Magic Spring</li>
+              <li>2 Baseball Fun Bands</li>
+              <li>Wooden Baseball Paddle ball Game</li>
+              <li>Baseball Whistle
+              <br><br>DESIGNED FOR BOYS and GIRLS ages 3 & up
+              <br>Items come in a bag with a printed design and TWIST TIE</li>
+            </ul>
+            <button onclick = "readMore()" id="myBtn">Read More</h5>
+          </span>
+        </div>
+      </div>
+    </div>
   </div>
 
-  
+
   <footer>
     <h4><a href="./premade.html">Premade Bags</a></h4>
     <h4><a href="./wholesale.html"> Wholesale Bags</a></h4>
