--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,7 @@
 <body>
   <div class="container">
     <p class = "cart">Your Cart</p>
+    <img class= "logo" src= "./images/cart.png"></img>
     <header class ="row">
       <a href = "./index.html"><img src = "./images/logo.png"></img></a>
       <nav>
