--- a/contact.html
+++ b/contact.html
@@ -9,8 +9,8 @@
 </head>
 <body>
   <div class="container">
-    <p class = "cart">Your Cart</p>
-    <img class= "logo" src= "./images/cart.png"></img>
+    <span class = "cart"><p>Your Cart</p>
+    <img class= "logo" src= "./images/cart.png"></img></span>
     <header class ="row">
       <a href = "./index.html"><img src = "./images/logo.png"></img></a>
       <nav>
