--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 <body onload = "showDivs(slideIndex)">
   <div class="container">
-    <p class = "cart">Your Cart</p>
+    <div class="row">
+      <span class = "cart"><p>Your Cart</p>
+      <img class= "logo" src= "./images/cart.png"></img></span>
+    </div>
     <header class ="row">
       <a href = "./index.html"><img class ="logo" src = "./images/logo.png"></img></a>
       <nav>
