--- a/premade.html
+++ b/premade.html
@@ -26,42 +26,45 @@
     </div>
     <div class = "main">
       <div class = "sub">
+
         <div class = "item">
+          <img src = "./images/baseball bag.png"></img>
           <h3 class = "itemName">Baseball Goody Bag</h3>
           <h4>$3.80</h4>
           <span class = "description">
             <p>Each Bag contains the following items:</p>
             <ul>
-              <li>Foam Baseball<span id = "dots">...</span></li>
-              <span id = "more"><li>Mini Baseball Sports Missile</li>
+              <li>Foam Baseball<span id = "dots 1">...</span></li>
+              <span style = "display: none;" id = "more 1"><li>Mini Baseball Sports Missile</li>
               <li>Baseball Tattoo (assorted)</li>
               <li>Mini Baseball Magic Spring</li>
               <li>2 Baseball Fun Bands</li>
               <li>Wooden Baseball Paddle ball Game</li>
               <li>Baseball Whistle
               <br><br>DESIGNED FOR BOYS and GIRLS ages 3 & up
-              <br>Items come in a bag with a printed design and TWIST TIE</li>
+              <br>Items come in a bag with a printed design and TWIST TIE</li></span>
             </ul>
-            <button onclick = "readMore()" id="myBtn">Read More</h5>
+            <button onclick = "readMore('dots 1', 'more 1', 'myBtn 1')" id="myBtn 1">Read More</h5>
           </span>
         </div>
+
         <div class = "item">
           <h3 class = "itemName">Baseball Goody Bag</h3>
           <h4>$3.80</h4>
           <span class = "description">
             <p>Each Bag contains the following items:</p>
             <ul>
-              <li>Foam Baseball<span id = "dots">...</span></li>
-              <span id = "more"><li>Mini Baseball Sports Missile</li>
+              <li>Foam Baseball<span id = "dots 2">...</span></li>
+              <span style = "display: none;" id = "more 2"><li>Mini Baseball Sports Missile</li>
               <li>Baseball Tattoo (assorted)</li>
               <li>Mini Baseball Magic Spring</li>
               <li>2 Baseball Fun Bands</li>
               <li>Wooden Baseball Paddle ball Game</li>
               <li>Baseball Whistle
               <br><br>DESIGNED FOR BOYS and GIRLS ages 3 & up
-              <br>Items come in a bag with a printed design and TWIST TIE</li>
+              <br>Items come in a bag with a printed design and TWIST TIE</li></span>
             </ul>
-            <button onclick = "readMore()" id="myBtn">Read More</h5>
+            <button onclick = "readMore('dots 2', 'more 2', 'myBtn 2')" id="myBtn 2">Read More</h5>
           </span>
         </div>
       </div>
