--- a/buildabag.html
+++ b/buildabag.html
@@ -20,14 +20,24 @@
         <a href = "./shipping.html"><button class = "button">Shipping</button></a>
       </nav>
     </header>
-  </div>
-  <div class="heading">
-    <h2>Build-A-Bag</h2>
-  </div>
-  <div main="main">
-    <div class="sub">
+
+
+    <div class="heading">
+      <h2>Build-A-Bag</h2>
+    </div>
+    <div class = "main">
+      <div class = "sub">
+        <h3>Easy as 1-2-3!</h3>
+        <ol>
+          <li>Choose a bag design</li>
+          <li>Choose a ribbon color (Optional)</li>
+          <li>Choose your items</li>
+        </ol>
+        <p>That's all. We put the bags together & they are ready to hand out at your celebration!</p>
+      </div>
     </div>
   </div>
+
 
   <footer>
     <h4><a href="./premade.html">Premade Bags</a></h4>
