--- a/wholesale.html
+++ b/wholesale.html
@@ -20,10 +20,17 @@
         <a href = "./shipping.html"><button class = "button">Shipping</button></a>
       </nav>
     </header>
+
+    <div class="heading">
+      <h2>Wholesale</h2>
+    </div>
+    <div class = "main">
+      <div class = "sub">
+      </div>
+    </div>
   </div>
-  <div class="heading">
-    <h2>Wholesale</h2>
-  </div>
+
+
   <footer>
     <h4><a href="./premade.html">Premade Bags</a></h4>
     <h4><a href="./wholesale.html"> Wholesale Bags</a></h4>
