--- a/contact.html
+++ b/contact.html
@@ -21,13 +21,18 @@
         <a href = "./shipping.html"><button class = "button">Shipping</button></a>
       </nav>
     </header>
-  </div>
-  <div class="heading">
-    <h2>Contacts</h2>
-  </div>
-  <div class="main">
 
+
+    <div class="heading">
+      <h2>Contacts</h2>
+    </div>
+    <div class="main">
+      <div class = "sub">
+      </div>
+    </div>
   </div>
+
+
   <footer>
     <h4><a href="./premade.html">Premade Bags</a></h4>
     <h4><a href="./wholesale.html"> Wholesale Bags</a></h4>
