--- a/index.html
+++ b/index.html
@@ -24,47 +24,57 @@
       </nav>
     </header>
 
+    <div class = "heading">
+      <h2>Welcome to Party Bags to Go</h2>
+    </div>
+    <div class = "main">
+      <div class = "sub">
+        <p>For over 8 years, we have been providing goodie bags for children's birthday parties and events.
+          We have also supplied goody bags for corporate picnics and events. Call us with any questions. 877-221-3326</p>
 
-    <div class = "grid">
-      <div class = "cell">
-        <h3>Premade Bags</h3>
-      </div>
-      <div class="cell">
-        <h3>Build-A-Bag</h3>
-      </div>
-      <div class="cell">
-        <h3>Wholesale Bags</h3>
+        <div class = "grid">
+          <div class = "cell">
+            <h3>Premade Bags</h3>
+          </div>
+          <div class="cell">
+            <h3>Build-A-Bag</h3>
+          </div>
+          <div class="cell">
+            <h3>Wholesale Bags</h3>
+          </div>
+        </div>
+
+        <div class ="slideGroup">
+          <button class = "gallery-button display-left" onclick="plusDivs(-1)">&#10094;</button>
+          <div class="slides">
+            <div class = "heading">This is a placeholder1</div>
+          </div>
+          <div class="slides">
+            <div class = "heading">This is a placeholder2</div>
+          </div>
+          <div class="slides">
+            <div class = "heading">This is a placeholder3</div>
+          </div>
+          <button class = "gallery-button display-right" onclick="plusDivs(1)">&#10095;</button>
+        </div>
+
+        <div class = "slideGroup">
+          <button class = "gallery-button display-left" onclick="plusDivs(-1)">&#10094;</button>
+          <div class="slides">
+            <div class = "heading">This is a placeholder4</div>
+          </div>
+          <div class="slides">
+            <div class = "heading">This is a placeholder5</div>
+          </div>
+          <div class="slides">
+            <div class = "heading">This is a placeholder6</div>
+          </div>
+          <button class = "gallery-button display-right" onclick="plusDivs(1)">&#10095;</button>
+        </div>
       </div>
     </div>
-
-    <div class ="slideGroup">
-       <button class = "gallery-button display-left" onclick="plusDivs(-1)">&#10094;</button>
-       <div class="slides">
-         <div class = "heading">This is a placeholder1</div>
-       </div>
-       <div class="slides">
-         <div class = "heading">This is a placeholder2</div>
-       </div>
-       <div class="slides">
-         <div class = "heading">This is a placeholder3</div>
-       </div>
-       <button class = "gallery-button display-right" onclick="plusDivs(1)">&#10095;</button>
-     </div>
-     <div class = "slideGroup">
-       <button class = "gallery-button display-left" onclick="plusDivs(-1)">&#10094;</button>
-       <div class="slides">
-         <div class = "heading">This is a placeholder4</div>
-       </div>
-       <div class="slides">
-         <div class = "heading">This is a placeholder5</div>
-       </div>
-       <div class="slides">
-         <div class = "heading">This is a placeholder6</div>
-       </div>
-       <button class = "gallery-button display-right" onclick="plusDivs(1)">&#10095;</button>
-     </div>
-
   </div>
+
   <footer>
     <h4><a href="./premade.html">Premade Bags</a></h4>
     <h4><a href="./wholesale.html"> Wholesale Bags</a></h4>
