--- a/premade.html
+++ b/premade.html
@@ -30,7 +30,7 @@
         <div class = "item">
           <img src = "./images/baseball bag.png"></img>
           <h3 class = "itemName">Baseball Goody Bag</h3>
-          <h4>$3.80</h4>
+          <h4 class = "itemPrice">$3.80</h4>
           <span class = "description">
             <p>Each Bag contains the following items:</p>
             <ul>
@@ -49,8 +49,9 @@
         </div>
 
         <div class = "item">
+          <img src = "./images/baseball bag.png"></img>
           <h3 class = "itemName">Baseball Goody Bag</h3>
-          <h4>$3.80</h4>
+          <h4 class = "itemPrice">$3.80</h4>
           <span class = "description">
             <p>Each Bag contains the following items:</p>
             <ul>
