--- a/shipping.html
+++ b/shipping.html
@@ -23,7 +23,7 @@
       </nav>
     </header>
 
-    
+
     <div class="heading">
       <h2>Shipping</h2>
     </div>
@@ -194,10 +194,10 @@
         <p>Express orders must also be placed by 1:00 Eastern time Monday - Friday.  BUT IF you find yourself in a snag after 1:00, give us a call and we will tell you if it is do-able - keep in mind you will need to talk to a real live person who can expedite the order or tell you if it is approved.</p>
         <h4>Shipment Notifications</h4>
         <p>An email will be sent the day after the goodie bags are shipped, and will include the expected delivery date and tracking number.</p>
-        <h4>other info:</h4>
+        <h4>Other Info:</h4>
         <p><strong>Shipping to Canada</strong> - Ocassionaly we ship order to Canada. Shipments are made using USPS Priority Mail International and charges for shipping usually range from $30.00 to $40.00. For large orders, the shipping cost may be higher. To get a shipping quote, use the contact us form and provide the shipping address, the quantity and the items you would like to order and we will email a quote back within 24 hours.</p>
         <p><strong>Returns</strong> - If you are not satisfied with your order, contact us to let us know you are returning the order. We will refund your order 100% minus the shipping charges and any charges for candy. The candy will be disposed upon return.</p>
-        <p>* On rare occasions we will ship small orders USPS</p>
+        <br><p>* On rare occasions we will ship small orders USPS</p>
       </div>
     </div>
   </div>
