--- a/contact.html
+++ b/contact.html
@@ -9,8 +9,10 @@
 </head>
 <body>
   <div class="container">
-    <span class = "cart"><p>Your Cart</p>
-    <img class= "logo" src= "./images/cart.png"></img></span>
+    <div class="container">
+      <span class = "cart"><p>Your Cart</p>
+        <img class= "logo" src= "./images/cart.png"></img></span>
+    </div>
     <header class ="row">
       <a href = "./index.html"><img src = "./images/logo.png"></img></a>
       <nav>
