--- a/wholesale.html
+++ b/wholesale.html
@@ -22,7 +22,7 @@
     </header>
 
     <div class="heading">
-      <h2>Wholesale</h2>
+      <h2>Wholesale Bags</h2>
     </div>
     <div class = "main">
       <div class = "sub">
