--- a/buildabag.html
+++ b/buildabag.html
@@ -27,13 +27,20 @@
     </div>
     <div class = "main">
       <div class = "sub">
-        <h3>Easy as 1-2-3!</h3>
-        <ol>
-          <li>Choose a bag design</li>
-          <li>Choose a ribbon color (Optional)</li>
-          <li>Choose your items</li>
-        </ol>
-        <p>That's all. We put the bags together & they are ready to hand out at your celebration!</p>
+        <div id = "buildabagLayout">
+          <div class = "instuctions">
+            <h3>Easy as 1-2-3!</h3>
+            <ol>
+              <li>Choose a bag design</li>
+              <li>Choose a ribbon color (Optional)</li>
+              <li>Choose your items</li>
+            </ol>
+            <p>That's all. We put the bags together & they are ready to hand out at your celebration!</p>
+          </div>
+          <div class = "priceTracker">
+            <h3>Your Goody Bag</h3>
+          </div>
+        </div>
       </div>
     </div>
   </div>
