--- a/buildabag.html
+++ b/buildabag.html
@@ -39,6 +39,15 @@
           </div>
           <div class = "priceTracker">
             <h3>Your Goody Bag</h3>
+            <h4>You Bag Design:</h4>
+            <h4>Your Ribbon Choice:</h4>
+            <h4>Your Item(s):</h4>
+          </div>
+          <div class = "itemGrid">
+            <h4>Bag Designs<h4>
+            <div class = "BABItem">
+              <img src = "./images/birthday bag.jpg"></img>
+            </div>
           </div>
         </div>
       </div>
