--- a/premade.html
+++ b/premade.html
@@ -44,8 +44,9 @@
               <br><br>DESIGNED FOR BOYS and GIRLS ages 3 & up
               <br>Items come in a bag with a printed design and TWIST TIE</li></span>
             </ul>
-            <button onclick = "readMore('dots 1', 'more 1', 'myBtn 1')" id="myBtn 1">Read More</h5>
+            <button onclick = "readMore('dots 1', 'more 1', 'myBtn 1')" id="myBtn 1">Read More</button>
           </span>
+          <div class = "addToCart">Add To Cart</div>
         </div>
 
         <div class = "item">
@@ -65,8 +66,9 @@
               <br><br>DESIGNED FOR BOYS and GIRLS ages 3 & up
               <br>Items come in a bag with a printed design and TWIST TIE</li></span>
             </ul>
-            <button onclick = "readMore('dots 2', 'more 2', 'myBtn 2')" id="myBtn 2">Read More</h5>
+            <button onclick = "readMore('dots 2', 'more 2', 'myBtn 2')" id="myBtn 2">Read More</button>
           </span>
+          <div class = "addToCart">Add To Cart</div>
         </div>
       </div>
     </div>
