--- a/buildabag.html
+++ b/buildabag.html
@@ -44,9 +44,31 @@
             <h4>Your Item(s):</h4>
           </div>
           <div class = "itemGrid">
-            <h4>Bag Designs<h4>
+            <h4 class = "itemType">Bag Designs:</h4>
             <div class = "BABItem">
               <img src = "./images/birthday bag.jpg"></img>
+              <h4>Birthday Party Bag</h4>
+              <h5>$0.15</h5>
+            </div>
+            <div class = "BABItem">
+              <img src = "./images/Camouflage Drawstring Bag.jpg"></img>
+              <h4>Camouflage Drawstring Bag</h4>
+              <h5>$1.25</h5>
+            </div>
+            <div class = "BABItem">
+              <img src = "./images/canvas bags.jpg"></img>
+              <h4>Canvas Tote Bag</h4>
+              <h5>$1.00</h5>
+            </div>
+            <div class = "BABItem">
+              <img src = "./images/chevron.jpg"></img>
+              <h4>Chevron Bag</h4>
+              <h5>$0.15</h5>
+            </div>
+            <div class = "BABItem">
+              <img src = "./images/confetti.jpg"></img>
+              <h4>Confetti Bag</h4>
+              <h5>$0.15</h5>
             </div>
           </div>
         </div>
