--- a/contact.html
+++ b/contact.html
@@ -9,10 +9,9 @@
 </head>
 <body>
   <div class="container">
-    <div class="container">
-      <span class = "cart"><p>Your Cart</p>
-        <img class= "logo" src= "./images/cart.png"></img></span>
-    </div>
+      <button class="button"> <span class= "cart"><p>Your Cart</p>
+        <img class= "logo" src= "./images/cart.png"></img></span></button>
+        
     <header class ="row">
       <a href = "./index.html"><img src = "./images/logo.png"></img></a>
       <nav>
