--- a/contact.html
+++ b/contact.html
@@ -9,9 +9,10 @@
 </head>
 <body>
   <div class="container">
-      <button class="button"> <span class= "cart"><p>Your Cart</p>
-        <img class= "logo" src= "./images/cart.png"></img></span></button>
-        
+    <button class="button"> <span class= "cart"><p>Your Cart</p>
+      <img class= "logo" src= "./images/cart.png"></img></span></button>
+  </div>
+  <div class="container">
     <header class ="row">
       <a href = "./index.html"><img src = "./images/logo.png"></img></a>
       <nav>
