--- a/buildabag.html
+++ b/buildabag.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" type="text/css" href="./css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
-  <script type="text/javascript" src="./js/scripts.js"></script>
+  <script type="text/javascript" src="./js/bab.js"></script>
 </head>
 <body>
   <div class="container">
@@ -49,6 +49,9 @@
               <img src = "./images/birthday bag.jpg"></img>
               <h4>Birthday Party Bag</h4>
               <h5>$0.15</h5>
+              <button onclick = "addRibbon(orangeRibbon)">
+                Add to Bag
+              </button>
             </div>
             <div class = "BABItem">
               <img src = "./images/Camouflage Drawstring Bag.jpg"></img>
