--- a/contact.html
+++ b/contact.html
@@ -9,8 +9,8 @@
 </head>
 <body>
   <div class="container">
-    <button class="button"> <span class= "cart"><p>Your Cart</p>
-      <img class= "logo" src= "./images/cart.png"></img></span></button>
+    <div class="cart"> <p>Your Cart</p>
+      <img class= "logo" src= "./images/cart.png"></img></div>
   </div>
   <div class="container">
     <header class ="row">
