--- a/buildabag.html
+++ b/buildabag.html
@@ -37,11 +37,18 @@
             </ol>
             <p>That's all. We put the bags together & they are ready to hand out at your celebration!</p>
           </div>
-          <div class = "priceTracker">
-            <h3>Your Goody Bag</h3>
-            <h4>You Bag Design:</h4>
-            <h4>Your Ribbon Choice:</h4>
-            <h4>Your Item(s):</h4>
+          <div id = "priceTrackerCell">
+            <div class = "priceTracker">
+              <h3>Your Goody Bag</h3>
+              <h4>Selected Bag:</h4>
+              <h5 id = "bagChoice">Nothing Here Yet</h5>
+              <h4>Selected Ribbon:</h4>
+              <h5 id  = "ribbonChoice">Nothing Here Yet</h5>
+              <h4>Selected Item(s):</h4>
+              <h5 id = "itemsChoice">Nothing Here Yet</h5>
+              <h4>Total:</h4>
+              <h5 id = "totalPrice">$0.00</h5>
+            </div>
           </div>
           <div class = "itemGrid">
             <h4 class = "itemType">Bag Designs:</h4>
@@ -49,7 +56,7 @@
               <img src = "./images/birthday bag.jpg"></img>
               <h4>Birthday Party Bag</h4>
               <h5>$0.15</h5>
-              <button onclick = "addRibbon(orangeRibbon)">
+              <button onclick = "addBag(birthdayPartyBag)">
                 Add to Bag
               </button>
             </div>
@@ -57,21 +64,97 @@
               <img src = "./images/Camouflage Drawstring Bag.jpg"></img>
               <h4>Camouflage Drawstring Bag</h4>
               <h5>$1.25</h5>
+              <button onclick = "addBag(camoDrawstringBag)">
+                Add to Bag
+              </button>
             </div>
             <div class = "BABItem">
               <img src = "./images/canvas bags.jpg"></img>
               <h4>Canvas Tote Bag</h4>
               <h5>$1.00</h5>
+              <button onclick = "addBag(canvasToteBag)">
+                Add to Bag
+              </button>
             </div>
             <div class = "BABItem">
               <img src = "./images/chevron.jpg"></img>
               <h4>Chevron Bag</h4>
               <h5>$0.15</h5>
+              <button onclick = "addBag(chevronBag)">
+                Add to Bag
+              </button>
             </div>
             <div class = "BABItem">
               <img src = "./images/confetti.jpg"></img>
               <h4>Confetti Bag</h4>
               <h5>$0.15</h5>
+              <button onclick = "addBag(confettiBag)">
+                Add to Bag
+              </button>
+            </div>
+          </div>
+
+            <div class = "itemGrid">
+              <h4 class = "itemType">Ribbons:</h4>
+              <div class = "BABItem">
+                <img src = "./images/NoRibbons.jpg"></img>
+                <h4>No Ribbon</h4>
+                <h5>$0.00</h5>
+                <button onclick = "addRibbon(noRibbon)">
+                  Add to Bag
+                </button>
+              </div>
+              <div class = "BABItem">
+                <img src = "./images/OrangeRibbon.jpg"></img>
+                <h4>Orange Ribbon</h4>
+                <h5>$0.50</h5>
+                <button onclick = "addRibbon(orangeRibbon)">
+                  Add to Bag
+                </button>
+              </div>
+              <div class = "BABItem">
+                <img src = "./images/PINKRIbbon.jpg"></img>
+                <h4>Pink Ribbon</h4>
+                <h5>$0.50</h5>
+                <button onclick = "addRibbon(pinkRibbon)">
+                  Add to Bag
+                </button>
+              </div>
+              <div class = "BABItem">
+                <img src = "./images/RedRibbon.jpg"></img>
+                <h4>Red Ribbon</h4>
+                <h5>$0.50</h5>
+                <button onclick = "addRibbon(redRibbon)">
+                  Add to Bag
+                </button>
+              </div>
+              <div class = "BABItem">
+                <img src = "./images/YellowRibbon.jpg"></img>
+                <h4>Yellow Ribbon</h4>
+                <h5>$0.50</h5>
+                <button onclick = "addRibbon(yellowRibbon)">
+                  Add to Bag
+                </button>
+              </div>
+            </div>
+
+            <div class = "itemGrid">
+              <div class = "BABItem">
+                <img src = "./images/mixcandy.jpg"></img>
+                <h4>10 Pieces of Candy</h4>
+                <h5>$0.95</h5>
+                <button onclick = "addItems(candy10pieces)">
+                  Add to Bag
+                </button>
+              </div>
+              <div class = "BABItem">
+                <img src = "./images/carBalloonRacer.jpg"></img>
+                <h4>Car Balloon Racer</h4>
+                <h5>$0.75</h5>
+                <button onclick = "addItems(carBalloonRacer)">
+                  Add to Bag
+                </button>
+              </div>
             </div>
           </div>
         </div>
