--- a/premade.html
+++ b/premade.html
@@ -50,23 +50,152 @@
         </div>
 
         <div class = "item">
-          <img src = "./images/baseball bag.png"></img>
-          <h3 class = "itemName">Baseball Goody Bag</h3>
-          <h4 class = "itemPrice">$3.80</h4>
+          <img src = "./images/j.png"></img>
+          <h3 class = "itemName">Deluxe Camouflage Goodie Bag</h3>
+          <h4 class = "itemPrice">$6.25</h4>
           <span class = "description">
             <p>Each Bag contains the following items:</p>
             <ul>
-              <li>Foam Baseball<span id = "dots 2">...</span></li>
-              <span style = "display: none;" id = "more 2"><li>Mini Baseball Sports Missile</li>
-              <li>Baseball Tattoo (assorted)</li>
-              <li>Mini Baseball Magic Spring</li>
-              <li>2 Baseball Fun Bands</li>
-              <li>Wooden Baseball Paddle ball Game</li>
-              <li>Baseball Whistle
-              <br><br>DESIGNED FOR BOYS and GIRLS ages 3 & up
+              <li>Camouflage Vinyl Kick Ball 2"<span id = "dots 2">...</span></li>
+              <span style = "display: none;" id = "more 2"><li>8 Army Men</li>
+              <li>Silicone Camouflage Army Sayings Bracelets</li>
+              <li>Camouflage Glasses</li>
+              <li>1 " Camouflage Bounce Ball</li>
+              <li>Military Themed Tattoo</li>
+              <li>Paper Camouflage Glider</li>
+              <li>Flying Army Man ir Large 4" Paratrooper</li>
+              <li>Camouflage Army Dog Tag Necklace</li>
+              <li>Plastic Camouflage Binoculars</li>
+              <br><br>DESIGNED WITH BOYS IN MIND AGES 5-12
               <br>Items come in a bag with a printed design and TWIST TIE</li></span>
             </ul>
             <button onclick = "readMore('dots 2', 'more 2', 'myBtn 2')" id="myBtn 2">Read More</button>
+          </span>
+          <div class = "addToCart">Add To Cart</div>
+        </div>
+        <div class = "item">
+          <img src = "./images/DinosuarBag.jpg"></img>
+          <h3 class = "itemName">Dinosaur Goody Bag</h3>
+          <h4 class = "itemPrice">$3.75</h4>
+          <span class = "description">
+            <p>Each Bag contains the following items:</p>
+            <ul>
+              <li>Dinosaur Realistic Finger Puppet<span id = "dots 3">...</span></li>
+              <span style = "display: none;" id = "more 3"><li>Dinosaur Figurine</li>
+              <li>Frog Squirt or Fish Squirt</li>
+              <li>Dinosaur Stamp</li>
+              <li>Dinosaur Tattoo</li>
+              <li>Squish Dinosaur</li>
+              <li>Dinosaur Slide Puzzle</li>
+              <li>2 Dinosaur Shaped Bands</li>
+              <br><br>DESIGNED BOYS AND GIRLS
+              <br>Items come in a bag with a printed design and TWIST TIE</li></span>
+            </ul>
+            <button onclick = "readMore('dots 3', 'more 3', 'myBtn 3')" id="myBtn 3">Read More</button>
+          </span>
+          <div class = "addToCart">Add To Cart</div>
+        </div>
+        <div class = "item">
+          <img src = "./images/DeluxePrincess.jpg"></img>
+          <h3 class = "itemName">Deluxe Princess Goodie Bag</h3>
+          <h4 class = "itemPrice">$5.75</h4>
+          <span class = "description">
+            <p>Each Bag contains the following items:</p>
+            <ul>
+              <li>Butterfly Sunglasses<span id = "dots 4">...</span></li>
+              <span style = "display: none;" id = "more 4"><li>Magic Wand</li>
+              <li>Princess Bubble Wand</li>
+              <li>Princess Sayings Braclet</li>
+              <li>Metal Adjustable Crown Ring</li>
+              <li>Princess Crayons and Coloring Pad</li>
+              <li>3 Princess Shaped Bands or Beaded Necklace</li>
+              <li>Princess Notepad</li>
+              <li>Girl Tattoo</li>
+              <li>Princess Rubber Duckie
+              <br><br>DESIGNED GIRLS ages 3 & up
+              <br>Items come in a bag with a printed design and TWIST TIE</li></span>
+            </ul>
+            <button onclick = "readMore('dots 4', 'more 4', 'myBtn 4')" id="myBtn 4">Read More</button>
+          </span>
+          <div class = "addToCart">Add To Cart</div>
+        </div>
+        <div class = "item">
+          <img src = "./images/barrel of slime.jpg"></img>
+          <h3 class = "itemName">Boys Will Be Boys</h3>
+          <h4 class = "itemPrice">$7.10</h4>
+          <span class = "description">
+            <p>Each Bag contains the following items:</p>
+            <ul>
+              <li>Barrel of Slime<span id = "dots 5">...</span></li>
+              <span style = "display: none;" id = "more 5"><li>Nylon Wallet</li>
+              <li>Realistic Spider</li>
+              <li>Inflatable Sports Ball</li>
+              <li>Punch Balloon</li>
+              <li>Squirt Gun
+              <br><br>SUITED FOR AGES 3 AND UP
+              <br>All items come in a canvas tote bag from assorted colors</li></span>
+            </ul>
+            <button onclick = "readMore('dots 5', 'more 5', 'myBtn 5')" id="myBtn 5">Read More</button>
+          </span>
+          <div class = "addToCart">Add To Cart</div>
+        </div>
+        <div class = "item">
+          <img src = "./images/diary.jpg"></img>
+          <h3 class = "itemName">Girls Wanna Have Fun</h3>
+          <h4 class = "itemPrice">$7.95</h4>
+          <span class = "description">
+            <p>Each Bag contains the following items:</p>
+            <ul>
+              <li>Fuzzy Diary<span id = "dots 6">...</span></li>
+              <span style = "display: none;" id = "more 6"><li>Feather Boa</li>
+              <li>White Gloves</li>
+              <li>Dolphin Necklace</li>
+              <li>Slap Bracelet from assortment</li>
+              <li>Sunglasses from assortment
+              <br><br>DESIGNED FOR GIRLS ages 3 & up
+              <br>All items come in a canvas tote bag from assorted colors</li></span>
+            </ul>
+            <button onclick = "readMore('dots 6', 'more 6', 'myBtn 6')" id="myBtn 6">Read More</button>
+          </span>
+          <div class = "addToCart">Add To Cart</div>
+        </div>
+        <div class = "item">
+          <img src = "./images/MagicBagDeluxe.jpg"></img>
+          <h3 class = "itemName">Deluxe Magic Goodie Bag</h3>
+          <h4 class = "itemPrice">$6.20</h4>
+          <span class = "description">
+            <p>Each Bag contains the following items:</p>
+            <ul>
+              <li>5 Magic Tricks (from assortment)<span id = "dots 7">...</span></li>
+              <span style = "display: none;" id = "more 7"><li>Whoopee Cushion</li>
+              <li>Wood Chip Finger Trap</li>
+              <li>Plastic Coin Trick</li>
+              <li>Horseshoe Magnet with Metal Bar</li>
+              <li>Sunglasses</li>
+              <li>Wire Puzzle
+              <br><br>For ages 6 & above--due to the complexity. For Boys and Girls
+              <br>Items come in a bag with a printed design and TWIST TIE</li></span>
+            </ul>
+            <button onclick = "readMore('dots 7', 'more 7', 'myBtn 7')" id="myBtn 7">Read More</button>
+          </span>
+          <div class = "addToCart">Add To Cart</div>
+        </div>
+        <div class = "item">
+          <img src = "./images/Big-kids-game-Bag.jpg"></img>
+          <h3 class = "itemName">Game Goodie Bag for Big Kids</h3>
+          <h4 class = "itemPrice">$4.25</h4>
+          <span class = "description">
+            <p>Each Bag contains the following items:</p>
+            <ul>
+              <li>Wooden Triangle Game<span id = "dots 8">...</span></li>
+              <span style = "display: none;" id = "more 8"><li>Metal Whistle</li>
+              <li>Cup and Ball Game</li>
+              <li>Smile Face Magic Cube</li>
+              <li>Plastic Puzzle Ball
+              <br><br>All items are for ages 3 & older
+              <br>Items come in a bag with a printed design and TWIST TIE. Bags ready to hand out</li></span>
+            </ul>
+            <button onclick = "readMore('dots 8', 'more 8', 'myBtn 8')" id="myBtn 8">Read More</button>
           </span>
           <div class = "addToCart">Add To Cart</div>
         </div>
